# EBA-aula08-RegLinearAnova2Fatores

./: README.md  pyproject.toml
data/: venda_mkt - PARA QUEM FOR USAR EXCEL.csv
notebooks/: fev_predict.csv  regressao_linear_multipla_observacional.ipynb  regressao_linear_simples.ipynb
